# imla-platform

./: .gitignore  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt  setup.cfg
examples/: classification_soiling_detection.yaml  credentials.json  regression_nyc.yaml  regression_wind_power_estimation.yaml  run_configs_classification.yaml  run_configs_classification_solar_data.yaml  run_configs_regression.yaml  run_configs_regression_nyc.yaml  run_configs_regression_wind_turbine.yaml  send_configs_to_service.py
forecasting_service/: base.py  config.py  data_stream.py  parser.py  run.py  service.py  tracing.py  validation.py
grpc/: Dockerfile  compose.yaml  example.env  forecasting.proto  requirements.txt
grpc/configs/: run_configs_regression_wind_turbine.yaml
grpc/serving/: config.py  forecasting_pb2.py  forecasting_pb2_grpc.py  grpc_client.py  grpc_route.py  grpc_server.py  send_config.py
imla_platform/: base.py  config.py  run.py  service.py
k8s_cluster/scripts/: README.md  cm.yaml  forecasting.yaml  grpc-forecasting.yaml  grpc.yaml  init_cluster.yaml  jaeger.yaml  join_cluster.yaml  kuberay-values.yaml  messaging.yaml  minio.yaml  modelardb.yaml  nfs-values.yaml  ns.yaml  post.yaml  pv.yaml  pvc.yaml  ray-cluster.yaml  raycluster-values.yaml  secret.yaml  tensorboard.yaml
k8s_cluster/setup/: README.md  master.yaml  post.yaml  worker.yaml
modelardb/: Dockerfile  README.md  compose-minio.yml  compose.yaml  load_parquet_file.py  query_modelardb.py  utility.py
modelardb/ModelarDB-RS/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-minio.yml  docker-compose.yml
rabbitmq/: Dockerfile  compose.yaml  definitions.json
(+31 files in other folders)
