[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-service"
description = "IMLA and Scalable Forecasting service for the MORE Project."
dynamic = [
    "version",
    "readme",
    "dependencies"
]
authors = [
    { name = "Dhaval Salwala", email = "dhaval.vinodbhai.salwala@ibm.com" },
    { name = "Seshu Tirupathi", email = "seshutir@ie.ibm.com" },
]
requires-python = "==3.10.*"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.dynamic]
version = { attr = "forecasting_service.__version__" }
readme = { file = [
    "README.md",
], content-type = "text/markdown" }
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "black",
    "pylint"
]

[tool.setuptools]
packages = [
    "forecasting_service",
]
zip-safe = false

[project.urls]
repository = "https://github.com/MORE-EU/forecasting-service"

[project.scripts]
run_service = "forecasting_service.run:main"
