[options]
install_requires =
    python-decouple
    pyyaml
    fsspec
    opentelemetry-api
    opentelemetry-sdk
    opentelemetry-exporter-jaeger
    ray==2.5.1
    moreutils@git+https://github.com/IBM/more-utils.git
    sail@git+https://github.com/IBM/sail.git#egg=sail[river,ray]

[options.extras_require]
dev =
    black
    pylint